--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
       - mynetwork
     env_file:
       - .env
-    command: ["uvicorn", "api.api:app", "--proxy-headers", "--host", "0.0.0.0", "--port", "8000"]
+    command: ["uvicorn", "src.api:app", "--proxy-headers", "--host", "0.0.0.0", "--port", "8000"]
 
   web:
     container_name: web
@@ -23,7 +23,7 @@ services:
       - mynetwork
     env_file:
       - .env
-    command: ["python3", "api/web.py"]
+    command: ["python3", "src/web.py"]
 
 
 networks:
